chapter 15: scoping_rules

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,5 +3,6 @@
 members = [
     "ch01_hello_world",
     "ch13_attributes",
-    "ch14_generics"
+    "ch14_generics",
+    "ch15_scoping_rules"
 ]
